# llm-distill

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: mvee_example.py  precursors_example.py
src/llm_distill/: __init__.py  cli.py  dataset.py  export.py  model.py  train.py
tests/: test_llm_distill.py
ts/: EpisodeLogger.ts  NNPolicy.ts
